chore: adjusting feature flag config

--- a/services/platform-config.json
+++ b/services/platform-config.json
@@ -6,7 +6,7 @@
              {
                  "field": "balance",
                  "value": "10000,00",
-                 "operation": "gt"
+                 "operation": "eq"
              }
         ]
   }
